# wsq-casl-cp-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_app.bat  streamlit_app.py  test_ai_generation.py  test_detailed.py  test_exact_streamlit.py  test_streamlit_import.py  test_topic_generation.py
.claude/skills/generate_topics/: SKILL.md  skills_description.csv
.claude/skills/lesson_plan/: SKILL.md
.streamlit/: config.toml
Courseware/2023036661 - Revit for Mechanical Design Professional Certification Prep/Course Proposal/: CP_TIPL_Revit for Mechanical Design_v2.1.docx
app/: ai_generator.py  config.py  extractor.py  generator_docx.py  generator_lesson_plan.py  generator_lesson_plan_pdf.py  generator_md.py  models.py  routes.py  simple_lesson_plan.py
settings/config/: api_config.db
static/: index.html  script.js  style.css
